@@ -23,10 +23,12 @@ class CPgsqlSchema extends CDbSchema
 
 	/**
 	 * Quotes a table name for use in a query.
+	 * A simple table name does not schema prefix.
 	 * @param string $name table name
 	 * @return string the properly quoted table name
+	 * @since 1.1.6
 	 */
-	public function quoteTableName($name)
+	public function quoteSimpleTableName($name)
 	{
 		return '"'.$name.'"';
 	}
@@ -76,11 +78,11 @@ class CPgsqlSchema extends CDbSchema
 	}
 
 	/**
-	 * Creates a table instance representing the metadata for the named table.
+	 * Loads the metadata for the specified table.
 	 * @param string $name table name
 	 * @return CDbTableSchema driver dependent table metadata.
 	 */
-	protected function createTable($name)
+	protected function loadTable($name)
 	{
 		$table=new CPgsqlTableSchema;
 		$this->resolveTableNames($table,$name);
